@@ -5,13 +5,13 @@
 <para>
 
 In order to run the installation system a working network setup and
-telnet session is needed on S/390.
+ssh session is needed on S/390.
 
 </para><para>
 
 The booting process starts with a network setup that prompts you for
 several network parameters. If the setup is successful, you will login
-to the system by starting a telnet session which will launch the
+to the system by starting a ssh session which will launch the
 standard installation system.
 
 </para>
