@@ -83,7 +83,7 @@ letter you typed and use <keycap>Pg-Up</keycap> and
 </para><para arch="s390">
 
 S/390 does not support virtual consoles. You may open a second and third
-telnet session to view the logs described below.
+ssh session to view the logs described below.
 
 </para><para>
 
